--- a/SHS-014-V/Src/Upload Result.fx.yaml
+++ b/SHS-014-V/Src/Upload Result.fx.yaml
@@ -452,7 +452,7 @@
                 ZIndex: =1
 
             DataCardValue82_1 As attachments:
-                BorderColor: =RGBA(58, 214, 131, 1)
+                BorderColor: =RGBA(180, 214, 250, 1)
                 BorderThickness: =10
                 DisplayMode: =Parent.DisplayMode
                 DropTargetBorderColor: =RGBA(9, 232, 206, 1)
@@ -477,7 +477,10 @@
 
             Button8_1 As button:
                 AlignInContainer: =AlignInContainer.Center
-                Fill: =RGBA(58, 214, 131, 1)
+                Color: =RGBA(0, 0, 0, 1)
+                Fill: =RGBA(9, 232, 206, 1)
+                HoverColor: =RGBA(255, 0, 0, 1)
+                HoverFill: =RGBA(9, 232, 206, 1)
                 OnSelect: |-
                     =If(
                         Not(
@@ -541,7 +544,7 @@
                 ZIndex: =1
 
             DataCardValue82_2 As attachments:
-                BorderColor: =RGBA(58, 214, 131, 1)
+                BorderColor: =RGBA(180, 214, 250, 1)
                 BorderThickness: =10
                 DisplayMode: =Parent.DisplayMode
                 Height: =Parent.Height
@@ -628,7 +631,7 @@
                 ZIndex: =1
 
             DataCardValue82_3 As attachments:
-                BorderColor: =RGBA(58, 214, 131, 1)
+                BorderColor: =RGBA(180, 214, 250, 1)
                 BorderThickness: =10
                 DisplayMode: =Parent.DisplayMode
                 Height: =Parent.Height
@@ -714,7 +717,7 @@
                 ZIndex: =1
 
             DataCardValue82_4 As attachments:
-                BorderColor: =RGBA(58, 214, 131, 1)
+                BorderColor: =RGBA(180, 214, 250, 1)
                 BorderThickness: =10
                 DisplayMode: =Parent.DisplayMode
                 Height: =Parent.Height
@@ -800,7 +803,7 @@
                 ZIndex: =1
 
             DataCardValue82_5 As attachments:
-                BorderColor: =RGBA(58, 214, 131, 1)
+                BorderColor: =RGBA(180, 214, 250, 1)
                 BorderThickness: =10
                 DisplayMode: =Parent.DisplayMode
                 Height: =Parent.Height
